C2LC-311: Resolve a layout issue where, the world selector is hidden behind the scene

--- a/src/App.scss
+++ b/src/App.scss
@@ -58,7 +58,7 @@ body {
     margin-top: 0.5rem;
     margin-right: 0.5rem;
     grid-column-start: 3;
-    grid-column-end: 5;
+    grid-column-end: 4;
     grid-row-start: 1;
     grid-row-end: 3;
     min-height: 12rem;
@@ -94,7 +94,7 @@ body {
     grid-row-end: 3;
     margin-right: 0.5rem;
     margin-top: 0.5rem;
-    margin-left: 1rem;
+    margin-left: 0.5rem;
     width: 6rem;
 }
 
